# weaselLibrary

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  xml.cpp  xml.h
DirectXTK11/: DeviceResources.cpp  DeviceResources.h  StepTimer.h  pch.cpp  pch.h
DirectXTK12/: DeviceResources.cpp  DeviceResources.h  StepTimer.h  pch.cpp  pch.h
compressor/src/: CMakeLists.txt  compLib_winCompApi.cpp  compLib_winCompApi.h  compressor.cpp  compressor.h
compressor/tst/: CMakeLists.txt  compressorTest.cpp
miniMax/: miniMax.cpp  miniMax.h  miniMaxWin.h  miniMaxWinCalcDb.cpp  miniMaxWinInspectDb.cpp
miniMax/src/: CMakeLists.txt  miniMax.cpp  miniMax.h  typeDef.cpp  typeDef.h
miniMax/src/alphaBeta/: alphaBeta.cpp  alphaBeta.h  commonThreadVars.cpp  commonThreadVars.h  knotStruct.cpp  knotStruct.h
miniMax/src/database/: database.cpp  database.h  databaseFile.cpp  databaseFile.h  databaseStats.cpp  databaseStats.h  databaseTypes.cpp  databaseTypes.h  dbCompTrans.cpp  dbCompTrans.h
miniMax/src/gui/: winCalcDb.cpp  winCalcDb.h  winInspectDb.cpp  winInspectDb.h
miniMax/src/integrity/: integrityChecker.cpp  integrityChecker.h
miniMax/src/retroAnalysis/: retroAnalysis.cpp  retroAnalysis.h  stateQueue.cpp  stateQueue.h  successorCountArray.cpp  successorCountArray.h
miniMax/src/statistics/: statistics.cpp  statistics.h
miniMax/tst/: CMakeLists.txt  MiniMaxAlphaBetaTest.cpp  MiniMaxDatabaseTest.cpp  MiniMaxGameStub.cpp  MiniMaxGameStub.h  MiniMaxIntegrityChecker.cpp  MiniMaxRetroAnalysisTest.cpp  MiniMaxStatisticsTest.cpp  MiniMaxTest.cpp
permutationGameSolver/: backTracking.cpp  permutationGameSolver.cpp  permutationGameSolver.h  pgsThread.cpp  pgsThread.h  pgsWin.cpp  pgsWin.h  zoneClass.cpp
permutationGameSolver/src/: CMakeLists.txt  backTracking.h  permutationGameSolver.cpp  permutationGameSolver.h  pgsThread.h  pgsWin.cpp  pgsWin.h  zoneClass.h
permutationGameSolver/tst/: CMakeLists.txt  pgsTest.cpp
weaselEssentials/src/: CMakeLists.txt  bitmapLoader.cpp  bitmapLoader.h  cyclicArray.cpp  cyclicArray.h  debugHelper.cpp  debugHelper.h  logger.cpp  logger.h  myUtil.cpp  myUtil.h  strLib.cpp  strLib.h  tableClass.h  threadManager.cpp  threadManager.h  varCheck.h  xml.cpp  xml.h
weaselEssentials/tst/: CMakeLists.txt  CyclicArrayTest.cpp  strLibTest.cpp  threadManagerTest.cpp  xmlTest.cpp
wildWeasel/: readme.md  wildWeasel.cpp  wildWeasel.h  ww3D.cpp  ww3D.h  wwAlignment.cpp  wwAnimation.cpp  wwAnimation.h  wwEditField.cpp  wwEditField.h  wwExamples.cpp  wwFlipbook.h  wwGuiElement.cpp  wwGuiElement.h  wwListView.cpp  wwListView.h  wwMasterMind.cpp  wwMasterMind.h  wwRotCtrlCube.cpp  wwRotCtrlCube.h  wwTreeView.cpp  wwTreeView.h
wildWeasel/src/: CMakeLists.txt  wildWeasel.cpp  wildWeasel.h  ww3D.cpp  ww3D.h  wwAlignment.cpp  wwAlignment.h  wwAnimation.cpp  wwBluetooth.cpp  wwBluetooth.h  wwEditField.cpp  wwEditField.h  wwExamples.cpp  wwExamples.h  wwFlipBook.cpp  wwGuiElement.cpp  wwGuiElement.h  wwHttpServer.cpp  wwHttpServer.h  wwListView.cpp  wwListView.h  wwMasterMind.cpp  wwMasterMind.h  wwRotCtrlCube.cpp  wwRotCtrlCube.h  wwThread.cpp  wwThread.h  wwTreeView.cpp  wwTreeView.h
wildWeasel/src/ssf_DXTK11/: wwSsf.cpp  wwSsf.h
wildWeasel/ssf_DXTK11/: wwSsf.cpp  wwSsf.h
